--- a/AudioWorkoutCreator/AudioWorkoutCreator/AudioWorkoutCreator.csproj
+++ b/AudioWorkoutCreator/AudioWorkoutCreator/AudioWorkoutCreator.csproj
@@ -57,7 +57,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NAudio, Version=1.8.4.0, Culture=neutral, processorArchitecture=MSIL">
@@ -79,7 +79,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Wavify, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Wavify.1.2.0\lib\Net40\Wavify.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Downloads\AudioWorkoutCreator\Wavify.dll</HintPath>
     </Reference>
     <Reference Include="Wavify.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Wavify.1.2.0\lib\Net40\Wavify.Core.dll</HintPath>
